--- a/work/templates/baes.html
+++ b/work/templates/baes.html
@@ -177,7 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span>)</div>
 					<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
 				</a>
-				<p><a href="javascript:;" class="simpleCart_empty">购物车</a></p>
+				<p><a href="{% url 'lamp:checkout' %}" class="simpleCart_empty">购物车</a></p>
 			 	<div class="clearfix"> </div>
 			 </div>
 			 <div class="clearfix"> </div>
