--- a/work/templates/checkout.html
+++ b/work/templates/checkout.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Checkout</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+{% extends 'baes.html' %}
+
+{% block title %}
+购物车
+{% endblock %}
+
+
+{% block link %}
+
+
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
 <!-- Custom Theme files -->
 <!--theme style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<script src="js/jquery.min.js"></script>
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<script src="/static/js/jquery.min.js"></script>
 
 
 <!--//theme-style-->
@@ -18,141 +24,30 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- start menu -->
-<script src="js/simpleCart.min.js"> </script>
+<script src="/static/js/simpleCart.min.js"> </script>
 <!-- start menu -->
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
+<link href="/static/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="/static/js/memenu.js"></script>
 <script>$(document).ready(function(){$(".memenu").memenu();});</script>	
 <!-- /start menu -->
-</head>
-<body>
-<!-- header -->
-<div class="header-top">
-	 <div class="header-bottom">			
-				<div class="logo">
-					<h1><a href="index.html">Lighting</a></h1>					
-				</div>
-			 <!---->		 
-			 <div class="top-nav">
-				<ul class="memenu skyblue"><li><a href="index.html">Home</a></li>
-					<li><a href="#">Products</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Home</a></li>
-										<li><a href="product.html">Decorates</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Type</h4>
-									<ul>
-										<li><a href="product.html">Diwali Lights</a></li>
-										<li><a href="product.html">Tube Lights</a></li>
-										<li><a href="product.html">Bulbs</a></li>
-										<li><a href="product.html">Ceiling Lights</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Lanterns</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Everyday</a></li>
-										<li><a href="product.html">Philips</a></li>
-										<li><a href="product.html">Havells</a></li>
-										<li><a href="product.html">Wipro</a></li>
-										<li><a href="product.html">Jaguar</a></li>
-										<li><a href="product.html">Ave</a></li>
-										<li><a href="product.html">Gold Medal</a></li>
-										<li><a href="product.html">Anchor</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li class="grid"><a href="#">Accessories</a>
-						<div class="mepanel">
-							<div class="row">
-								<div class="col1 me-one">
-									<h4>Shop</h4>
-									<ul>
-										<li><a href="product.html">New Arrivals</a></li>
-										<li><a href="product.html">Home</a></li>
-										<li><a href="product.html">Decorates</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Kids</a></li>
-										<li><a href="product.html">Login</a></li>
-										<li><a href="product.html">Brands</a></li>
-										<li><a href="product.html">My Shopping Bag</a></li>
-									</ul>
-								</div>
-								<div class="col1 me-one">
-									<h4>Type</h4>
-									<ul>
-										<li><a href="product.html">Diwali Lights</a></li>
-										<li><a href="product.html">Tube Lights</a></li>
-										<li><a href="product.html">Bulbs</a></li>
-										<li><a href="product.html">Ceiling Lights</a></li>
-										<li><a href="product.html">Accessories</a></li>
-										<li><a href="product.html">Lanterns</a></li>
-									</ul>	
-								</div>
-								<div class="col1 me-one">
-									<h4>Popular Brands</h4>
-									<ul>
-										<li><a href="product.html">Everyday</a></li>
-										<li><a href="product.html">Philips</a></li>
-										<li><a href="product.html">Havells</a></li>
-										<li><a href="product.html">Wipro</a></li>
-										<li><a href="product.html">Jaguar</a></li>
-										<li><a href="product.html">Ave</a></li>
-										<li><a href="product.html">Gold Medal</a></li>
-										<li><a href="product.html">Anchor</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</li>
-					<li><a href="typo.html">Typo</a></li>
-					<li class="grid"><a href="contact.html">Contact</a></li>
-				</ul>
-				<div class="clearfix"> </div>
-			 </div>
-			 <!---->
-			 <div class="cart box_1">
-				 <a href="checkout.html">
-					<div class="total">
-					<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span>)</div>
-					<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-				</a>
-				<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-			 	<div class="clearfix"> </div>
-			 </div>
-			 <div class="clearfix"> </div>
-			 <!---->			 
-			 </div>
-			<div class="clearfix"> </div>
-</div>
+
+{% endblock %}
+
+{% block body %}
+
+
 <!-- check out -->
 <div class="container">
 	<div class="check-sec">	 
 		<div class="col-md-3 cart-total">
 			<a class="continue" href="product.html">Continue to basket</a>
 			<div class="price-details">
-				<h3>Price Details</h3>
-				<span>Total</span>
+				<h3>价格细节</h3>
+				<span>总计</span>
 				<span class="total1">6200.00</span>
-				<span>Discount</span>
-				<span class="total1">10%(Festival Offer)</span>
-				<span>Delivery Charges</span>
+				<span>折扣</span>
+				<span class="total1">10%(节日优惠)</span>
+				<span>送货费</span>
 				<span class="total1">150.00</span>
 				<div class="clearfix"></div>				 
 			</div>	
@@ -235,74 +130,4 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </div>
 <!-- //check out -->
-<!---->
-<div class="subscribe">
-	 <div class="container">
-		 <h3>Newsletter</h3>
-		 <form>
-			 <input type="text" class="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
-			 <input type="submit" value="Subscribe">
-		 </form>
-	 </div>
-</div>
-<!---->
-<div class="footer">
-	 <div class="container">
-		 <div class="footer-grids">
-			 <div class="col-md-3 about-us">
-				 <h3>About Us</h3>
-				 <p>Maecenas nec auctor sem. Vivamus porttitor tincidunt elementum nisi a, euismod rhoncus urna. Curabitur scelerisque vulputate arcu eu pulvinar. Fusce vel neque diam</p>
-			 </div>
-			 <div class="col-md-3 ftr-grid">
-					<h3>Information</h3>
-					<ul class="nav-bottom">
-						<li><a href="#">Track Order</a></li>
-						<li><a href="#">New Products</a></li>
-						<li><a href="#">Location</a></li>
-						<li><a href="#">Our Stores</a></li>
-						<li><a href="#">Best Sellers</a></li>	
-					</ul>					
-			 </div>
-			 <div class="col-md-3 ftr-grid">
-					<h3>More Info</h3>
-					<ul class="nav-bottom">
-						<li><a href="login.html">Login</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="#">Shipping</a></li>
-						<li><a href="#">Membership</a></li>	
-					</ul>					
-			 </div>
-			 <div class="col-md-3 ftr-grid">
-					<h3>Categories</h3>
-					<ul class="nav-bottom">
-						<li><a href="#">Car Lights</a></li>
-						<li><a href="#">LED Lights</a></li>
-						<li><a href="#">Decorates</a></li>
-						<li><a href="#">Wall Lights</a></li>
-						<li><a href="#">Protectors</a></li>	
-					</ul>					
-			 </div>
-			 <div class="clearfix"></div>
-		 </div>
-	 </div>
-</div>
-<!---->
-<div class="copywrite">
-	 <div class="container">
-		 <div class="copy">
-			 <p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-		 </div>
-		 <div class="social">							
-				<a href="#"><i class="facebook"></i></a>
-				<a href="#"><i class="twitter"></i></a>
-				<a href="#"><i class="dribble"></i></a>	
-				<a href="#"><i class="google"></i></a>	
-				<a href="#"><i class="youtube"></i></a>	
-		 </div>
-		 <div class="clearfix"></div>
-	 </div>
-</div>
-<!---->
-</body>
-</html>
+{% endblock %}
