--- a/work/templates/index.html
+++ b/work/templates/index.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 					 </div>
 					 <div class="viw">
-						<a href="{% url 'lamp:single' product.id %}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>视图</a>
+						<a href="{% url 'lamp:product' %}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>视图</a>
 					 </div>
 				  </a>
 			 </div>
